I fixed the play video text by adding text-overflow: clip & white-space: nowwrap, and adding some padding

--- a/css/main.scss
+++ b/css/main.scss
@@ -85,11 +85,15 @@ section{
     .watch-video-cta{
         display: block;
         margin-top: 1em;
+        
+        
+
 
         img{
-            max-width: 5%;
-            margin-left: .5em;
+            max-width: 2%;
+            margin-left: 5em;
             padding-right: .3em;
+      
         }
     }
 
@@ -317,6 +321,10 @@ nav.menu-btn{
 
     }
 
+    img {
+        min-width: 2%;
+    }
+
       
   }
 
@@ -332,7 +340,7 @@ nav.menu-btn{
       }
 
       .hero .container {
-          display: flex;
+          display: block;
           justify-content: space-between;
           text-align: left;
 
@@ -340,7 +348,7 @@ nav.menu-btn{
               margin: 3em 3em 0 5em;
 
                img {
-                // max-width: auto;
+                max-width: auto;
 
               h1{
                   font-size: 3em;
@@ -353,7 +361,7 @@ nav.menu-btn{
         width: 50%;
     }
     .hero-cta{
-        display: flex;
+        display: block;
     }
     .primary-cta{
         margin-right: 1em;
@@ -373,7 +381,8 @@ nav.menu-btn{
     }
 
     .features-section{
-        position: relative;
+        // position: relative;
+        display: block;
 
         img{
             display: block;
